--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 project.ext.modID = "com.jubiman.humanflesh" // The unique id of your mod. Must be all lowercase and cannot use special characters.
 project.ext.modName = "Human Flesh" // The display name of your mod.
-project.ext.modVersion = "1.2" // Your current builds version. Must follow the xx.xx... format.
+project.ext.modVersion = "1.3" // Your current builds version. Must follow the xx.xx... format.
 project.ext.gameVersion = "0.21.26" // The target game version.
 project.ext.modDescription = "Adds human flesh to the game (for consumption)" // Short description of what your mod is.
 project.ext.author = "Jubiman" // Your name
@@ -24,6 +24,7 @@ project.ext.clientside = false
  * Dependencies define the default load order of mods
  * Uncomment and configure these if your mod has dependencies
  */
+project.ext.modDependencies = ["com.jubiman.customplayerlib"]
 //project.ext.modDependencies = ["other.modid1", "other.modid2"]
 //project.ext.modOptionalDependencies = ["optional.modid1", "optional.modid2"]
 
@@ -61,6 +62,8 @@ dependencies {
     implementation files(gameDirectory + "/Necesse.jar")
     implementation fileTree(gameDirectory + "/lib/")
     implementation fileTree("./mods/") // Add all mods located in local mods folder
+
+    compileOnly "com.jubiman:customplayerlib:1.4"
 }
 
 task createAppID {
